--- a/BNG/components/service.html
+++ b/BNG/components/service.html
@@ -6,7 +6,7 @@
 				<img src="./images/web.jpg" class="card-img-top" alt="...">
 				<div class="card-body">
 					<h5 class="card-title">Web Development</h5>
-					<p class="card-text">We design and provide the soulution for business to increase their sales through the online visibility.</p>
+					<p class="card-text">We design and provide the solution for business to increase their sales through the online visibility.</p>
 				</div>
 			</div>
 		</div>
@@ -15,16 +15,16 @@
 				<img src='./images/computer.jpg' class="card-img-top" alt="...">
 				<div class="card-body">
 					<h5 class="card-title">IT Services</h5>
-					<p class="card-text">we provide to our customers differents IT Services like Computer maintenance,LAN Installation,Software installation,Computer and Phone repair.</p>
+					<p class="card-text">we provide to our customers differents IT Services like Computer maintenance,LAN installation,Software installation,Computer and Phone repair.</p>
 				</div>
 			</div>
 		</div>
 		<div class="col-sm-12 col-md-4 mb-4">
 			<div class="card shadow p-3 mb-5 bg-body rounded h-100" data-aos="flip-left">
-				<img src="./images/momo.jpg" class="card-img-top" alt="...">
+				<img src="./images/electro.jpg" class="card-img-top" alt="...">
 				<div class="card-body">
-					<h5 class="card-title">Mobile Money Services</h5>
-					<p class="card-text">We do sim SWAP and Sim registeration for both MTN and AIRTEL also we are Mobile Money and AIRTEL money agent.</p>
+					<h5 class="card-title">Electrical ,Air conditioning and Camera installation</h5>
+					<p class="card-text">We do  electrical installation for your building and installe the CCTV camera .</p>
 				</div>
 			</div>
 		</div>
