--- a/BNG/components/team.html
+++ b/BNG/components/team.html
@@ -17,7 +17,7 @@
 						<p id="first-position" class="card-text team-mobile"></p>
 					</div>
 				</div>
-			</div> <br><br><br>
+			</div> 
 			<!-- <div data-aos="fade-down" data-aos-offset="400" data-aos-easing="ease-in-sine"
 				class="col-xs-12 col-sm-12 col-md-3 p-5">
 				<div class="row">
@@ -43,7 +43,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<img name="fouthimg" class="rounded-circle team-mobile" alt="..." width="200" height="200" />
-						<h3 id="fouth-name" class="mt-3 team-mobile"></h3>
+						<h3 id="fouth-name" class="mt-5 team-mobile"></h3>
 						<p id="fouth-position" class="card-text team-mobile"></p>
 					</div>
 				</div>
