--- a/BNG/components/service.html
+++ b/BNG/components/service.html
@@ -24,7 +24,7 @@
 				<img src="./images/electro.jpg" class="card-img-top" alt="...">
 				<div class="card-body">
 					<h5 class="card-title">Electrical ,Air conditioning and Camera installation</h5>
-					<p class="card-text">We do  electrical installation for your building and installe the CCTV camera .</p>
+					<p class="card-text">We do  electrical installation for your building and we install the CCTV camera .</p>
 				</div>
 			</div>
 		</div>
